--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "@pangenerator/tweakpane-textarea-plugin": "^1.0.4",
+    "codejar": "^4.2.0",
     "regl": "^2.1.0",
     "tweakpane": "^4.0.1"
   }
