--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@pangenerator/tweakpane-textarea-plugin": "^1.0.4",
     "canvas2video": "^1.1.4",
     "codejar": "^4.2.0",
+    "highlight.js": "^11.9.0",
     "regl": "^2.1.0",
     "tweakpane": "^4.0.1"
   }
